--- a/ML for ESKD/landmarking_locf.Rmd
+++ b/ML for ESKD/landmarking_locf.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "landmarking_locf"
 author: "Daniel Christiadi"
-date: 
+date: "Compiled on `r format(Sys.time(), '%d %B, %Y')`"
 output: html_document
 editor_options: 
   chunk_output_type: console
